Fix various rendering errors with fluorescent tubes, closes #5121